# shordly

./: .env  .env.db  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json
.github/workflows/: main.yml
api/: .dockerignore  .env.produccion  Cargo.toml  Dockerfile  Dockerfile.dev  entrypoint.sh
api/.sqlx/: query-146a2a18f2fff90aeda8a0322b2e76026c3802d5933979c6e1b51a331ba9e2f2.json  query-50e5d258d3a9ea79d1b8acf1efb45b51f41dd3af80d20ca931fe58d826310d89.json  query-682fabb199ee92cbe000f3f96e728d34e3e3df29cb39c377cbce8482f8db0465.json  query-8d6fdfb4e10a5312c400cada29d78b95b5f29467706f57b9df8b2877f8e11ee3.json  query-adec562283fc976223847300abfa80f4ac3a8dba9e366bd05ece4db681802bc3.json
api/migrations/: 20240823153056_stage1.up.sql  20240905032342_stage2.down.sql  20240905032342_stage2.up.sql
api/request/: examples.hurl
api/src/: db.rs  env_config.rs  main.rs  router.rs
api/src/handlers/: checkhealh_handlers.rs  mod.rs  url_handlers.rs
api/src/models/: mod.rs  url_models.rs
api/src/responses/: error_responses.rs
api/src/routes/: checkhealth_routes.rs  mod.rs  url_routes.rs
api/src/schemas/: mod.rs  url_schemas.rs
api/src/utils/: encode_functions.rs  mod.rs
api/src/validators/: mod.rs  url_validators.rs
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.mjs
frontend/src/components/: Footer.astro  GeneratorUrl.astro  InformationSection.astro  Navbar.astro
website/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
(+7 files in other folders)
