[package]
name = "shordly_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
harsh = "0.2.2"
serde = "1.0.208"
serde_json = "1.0.125"
sqlx = { version = "0.8.0", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.39.3", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["cors"] }
url = "2.5.2"
